# staticpipes-core

./: .devcontainer.json  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile.devcontainer  README.md  docs.py  pyproject.toml  setup.cfg
.github/workflows/: docs.yml  lint.yml  pypi.yml  test.yml
docs/: checks.md  collections.md  conf.py  develop_staticpipes.md  getting_started.md  index.md  index.rst  install.md  internal_model.md  pipes_and_processes.md  run.md
docs/_templates/: base.html  content.html  reference.html  reference_arguments.html
docs/cookbook/: css.md  index.md  jinja2.md  js.md  markdown.md  robotstxt.md  source_layout.md  url_shortener.md
staticpipes/: build_directory.py  bundle_base.py  check_base.py  check_report.py  cli.py  collection.py  collection_base.py  config.py  current_info.py  directory_base.py  jinja2_environment.py  pipe_and_group_of_pipes_base.py  pipe_base.py  pipe_bundle_base.py  process_base.py  process_current_info.py  serve.py  utils.py  watcher.py  worker.py  worker_storage.py
tests/: __init__.py  test_collection_csv.py  test_collection_json_list.py  test_collection_python_docs.py  test_copy.py  test_copy_with_versioning_then_jinja2.py  test_css_minifier.py  test_current_info.py  test_directory_base.py  test_exclude_underscore_directories.py  test_javascript_minifier.py  test_jinja2.py  test_mako.py  test_markdown_jinja2.py  test_markdown_yaml_jinja2.py  test_pipeline_process.py  test_process_current_info.py  test_pydoc.py  test_python_document_process.py  test_source_sub_directory.py  test_utils.py
(+85 files in other folders)
